# crible

./: Cargo.toml  README.md
crible-cli/: Cargo.toml
crible-cli/src/: main.rs
crible-core/: Cargo.toml
crible-core/benches/: score_hand.rs
crible-core/src/: lib.rs
src/: main.rs
