[package]
name = "crible-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "score_hand"
harness = false
